# tagging_mcp

./: .env.example  Dockerfile  QUICKSTART.md  README.md  pyproject.toml  tagging.py
