[project]
name = "tagging_mcp"
version = "0.1.0"
description = "MCP server for tagging CSV rows using polar_llama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "polar_llama",
    "polars",
    "pydantic>=2.0.0"
]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[project.scripts]
tagging_mcp = "tagging:mcp"
